# pipewriter

./: .gitignore  Cargo.toml  README.md
crates/vkr-pipe-test/: Cargo.toml
crates/vkr-pipe/src/: gen.rs
pipetest/: Cargo.toml
pipetest/shader/simple/: Cargo.toml
pipetest/tests/: test.rs
pipewriter/: Cargo.toml
pipewriter/src/: gen.rs  lib.rs  module.rs  shader.rs  util.rs
script/: build-pipewriter.sh
src/: lib.rs  shader.rs
tests/: test.rs
