[package]
name = "pipetest"
version = "0.1.0"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
edition = "2018"
license = "MIT"

[dependencies]
pipewriter =  { path = "../pipewriter" }

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu.git", branch = "main" }
